--- a/atividade-2.html
+++ b/atividade-2.html
@@ -24,7 +24,7 @@
     else{
         kill=nome2+" é mais pesado do que "+nome1;
     }
-    document.getElementById("peso").innerHTML=kill;
+    document.getElementById("peso").innerHTML=nome1+" tem "+peso1+" kilos<br> "+nome2+" tem "+peso2+" kilos <br>"+kill;
     
     </script>
 </body>
